--- a/practice/package.json
+++ b/practice/package.json
@@ -20,28 +20,32 @@
     "jquery": "$"
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "browser-sync": "^2.18.6",
+    "browser-sync": "^2.26.7",
     "browserify": "^14.5.0",
     "browserify-shim": "^3.8.14",
+    "css-declaration-sorter": "^5.1.1",
     "glob": "^7.1.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "latest",
     "gulp-data": "^1.2.1",
-    "gulp-ejs": "^3.0.0",
+    "gulp-ejs": "^3.3.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^3.2.1",
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "imagemin-jpegtran": "^5.0.2",
+    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^5.2.1",
     "imagemin-pngquant": "^5.1.0",
     "jquery": "^1.11.3",
