--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,6 @@
     "axos": "0.0.1",
     "babel": "^6.23.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.4.1",
@@ -77,6 +76,7 @@
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^7.1.5"
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0"
   }
 }
