--- a/web/package.json
+++ b/web/package.json
@@ -58,6 +58,7 @@
     "popper.js": "^1.16.0",
     "sass-loader": "^8.0.2",
     "smooth-scroll": "^16.1.2",
+    "three": "^0.120.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
