--- a/web/package.json
+++ b/web/package.json
@@ -57,7 +57,8 @@
     "picturefill": "^3.0.3",
     "popper.js": "^1.16.0",
     "sass-loader": "^8.0.2",
-    "smooth-scroll": "^16.1.2",
+    "smooth-scroll": "^16.1.3",
+    "swiper": "^5.4.1",
     "three": "^0.120.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
