--- a/web/package.json
+++ b/web/package.json
@@ -61,6 +61,7 @@
     "swiper": "^5.4.1",
     "three": "^0.120.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vanilla-tilt": "^1.7.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-html-loader": "^1.2.4",
